--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
             background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
         }
+        .fraud-detection-bg { background-color: #3498db; }
         .cyber-crimes-bg { background-color: #ff4757; }
         .digital-literacy-bg { background-color: #2ed573; }
         .privacy-ethics-bg { background-color: #5352ed; }
@@ -37,6 +38,7 @@
                     Literasi Digital
                 </a>
                 <ul class="hidden md:flex space-x-4">
+                     <li><a href="#penipuan-online" class="hover:text-blue-400 transition duration-300"><i class="fas fa-shield-alt mr-1 text-blue-400"></i>Penipuan Online</a></li>
                     <li><a href="#cyber-crimes" class="hover:text-red-400 transition duration-300"><i class="fas fa-exclamation-triangle mr-1 text-red-400"></i>Cyber Crimes</a></li>
                     <li><a href="#literasi-digital" class="hover:text-green-400 transition duration-300"><i class="fas fa-book-reader mr-1 text-green-400"></i>Literasi Digital</a></li>
                     <li><a href="#etika-privasi" class="hover:text-blue-400 transition duration-300"><i class="fas fa-user-secret mr-1 text-blue-400"></i>Etika Privasi</a></li>
@@ -47,6 +49,7 @@
                 </button>
             </div>
             <ul id="mobile-menu" class="hidden md:hidden mt-4 space-y-2">
+                <li><a href="#penipuan-online" class="block py-2 hover:bg-gray-800"><i class="fas fa-shield-alt mr-1 text-blue-400"></i>Penipuan Online</a></li>
                 <li><a href="#cyber-crimes" class="block py-2 hover:bg-gray-800"><i class="fas fa-exclamation-triangle mr-1 text-red-400"></i>Cyber Crimes</a></li>
                 <li><a href="#literasi-digital" class="block py-2 hover:bg-gray-800"><i class="fas fa-book-reader mr-1 text-green-400"></i>Literasi Digital</a></li>
                 <li><a href="#etika-privasi" class="block py-2 hover:bg-gray-800"><i class="fas fa-user-secret mr-1 text-blue-400"></i>Etika Privasi</a></li>
@@ -56,6 +59,23 @@
     </header>
 
     <main>
+        <section id="penipuan-online" class="py-16 fraud-detection-bg text-white">
+            <div class="container mx-auto px-4">
+                <h2 class="text-3xl font-bold mb-8 text-center"><i class="fas fa-shield-alt mr-2"></i>Cara Mengenali Penipuan Online</h2>
+                <div class="bg-white text-gray-900 p-6 rounded-lg shadow-md">
+                    <p class="mb-4">Penipuan online semakin canggih, tetapi dengan pengetahuan yang tepat, Anda dapat melindungi diri. Berikut beberapa cara untuk mengenali penipuan online:</p>
+                    <ul class="list-disc pl-6 mb-4">
+                        <li><i class="fas fa-envelope text-blue-500 mr-2"></i>Waspada terhadap email atau pesan yang meminta informasi pribadi atau keuangan.</li>
+                        <li><i class="fas fa-link text-green-500 mr-2"></i>Periksa URL situs web dengan teliti sebelum memasukkan informasi sensitif.</li>
+                        <li><i class="fas fa-exclamation-circle text-red-500 mr-2"></i>Berhati-hati dengan tawaran yang terlalu bagus untuk menjadi kenyataan.</li>
+                        <li><i class="fas fa-clock text-yellow-500 mr-2"></i>Waspadai tekanan untuk bertindak cepat atau ancaman.</li>
+                        <li><i class="fas fa-lock text-purple-500 mr-2"></i>Pastikan situs yang Anda kunjungi menggunakan koneksi aman (https).</li>
+                    </ul>
+                    <p>Ingat, jika Anda ragu, lebih baik tidak memberikan informasi atau melakukan transaksi. Selalu verifikasi identitas pihak yang meminta informasi Anda.</p>
+                </div>
+            </div>
+        </section>
+        
         <section class="cyber-bg py-20 text-center text-white">
             <div class="container mx-auto px-4">
                 <h1 class="text-4xl md:text-6xl font-bold mb-4">Selamat Datang di Media Sosial Cerdas</h1>
