--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <section id="literasi-digital" class="py-16 digital-literacy-bg text-white">
             <div class="container mx-auto px-4">
-                <h2 class="text-3xl font-bold mb-8 text-center">4 Pilar Literasi Digital: Fondasi dalam Era Digital</h2>
+                <h2 class="text-3xl font-bold mb-8 text-center">4 Pilar Literasi Digital Fondasi dalam Era Digital</h2>
                 <div class="grid md:grid-cols-2 gap-8">
                     <div class="bg-white text-gray-900 p-6 rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold mb-4"><i class="fas fa-laptop-code mr-2 text-blue-500"></i>1. Kecakapan Digital (Digital Skills)</h3>
@@ -194,9 +194,9 @@
         <div class="container mx-auto text-center">
             <div class="mt-4 flex justify-center space-x-4">
                 <a href="https://www.facebook.com/agamriyandana.id" class="text-2xl hover:text-blue-400 transition duration-300" aria-label="Facebook"><i class="fab fa-facebook text-blue-600"></i></a>
-                <a href="https://x.com/agam_riyandana1/" class="text-2xl hover:text-blue-400 transition duration-300" aria-label="Twitter"><i class="fab fa-twitter text-blue-400"></i></a>
+                <a href="https://x.com/agam_riyandana1" class="text-2xl hover:text-blue-400 transition duration-300" aria-label="Twitter"><i class="fab fa-twitter text-blue-400"></i></a>
                 <a href="https://instagram.com/realagam1" class="text-2xl hover:text-blue-400 transition duration-300" aria-label="Instagram"><i class="fab fa-instagram text-pink-600"></i></a>
-                <a href="#" class="text-2xl hover:text-blue-400 transition duration-300" aria-label="LinkedIn"><i class="fab fa-linkedin text-blue-700"></i></a>
+                <a href="https://www.linkedin.com/in/agam-riyandana" class="text-2xl hover:text-blue-400 transition duration-300" aria-label="LinkedIn"><i class="fab fa-linkedin text-blue-700"></i></a>
             </div>
             <p class="mt-4">&copy; <span id="current-year"></span> Literasi Digital Dan Media Sosial Cerdas. All Rights Reserved. Dibuat dengan <i class="fas fa-heart text-red-500"></i> untuk Indonesia</p>
         </div>
