--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
             background-position: 0 0, 40px 60px, 130px 270px, 70px 100px;
         }
+        .fraud-prevention-bg { background-color: #e74c3c; }
         .fraud-detection-bg { background-color: #3498db; }
         .cyber-crimes-bg { background-color: #ff4757; }
         .digital-literacy-bg { background-color: #2ed573; }
@@ -38,11 +39,12 @@
                     Literasi Digital
                 </a>
                 <ul class="hidden md:flex space-x-4">
-                     <li><a href="#penipuan-online" class="hover:text-blue-400 transition duration-300"><i class="fas fa-shield-alt mr-1 text-blue-400"></i>Penipuan Online</a></li>
+                    <li><a href="#penipuan-online" class="hover:text-blue-400 transition duration-300"><i class="fas fa-shield-alt mr-1 text-blue-400"></i>Penipuan Online</a></li>
                     <li><a href="#cyber-crimes" class="hover:text-red-400 transition duration-300"><i class="fas fa-exclamation-triangle mr-1 text-red-400"></i>Cyber Crimes</a></li>
                     <li><a href="#literasi-digital" class="hover:text-green-400 transition duration-300"><i class="fas fa-book-reader mr-1 text-green-400"></i>Literasi Digital</a></li>
                     <li><a href="#etika-privasi" class="hover:text-blue-400 transition duration-300"><i class="fas fa-user-secret mr-1 text-blue-400"></i>Etika Privasi</a></li>
                     <li><a href="#praktik-terbaik" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-check-circle mr-1 text-yellow-400"></i>Praktik Terbaik</a></li>
+                    <li><a href="#pencegahan-penipuan" class="hover:text-red-400 transition duration-300"><i class="fas fa-user-shield mr-1 text-red-400"></i>Pencegahan Penipuan</a></li>
                 </ul>
                 <button class="md:hidden text-white focus:outline-none" id="menu-toggle" aria-label="Toggle menu">
                     <i class="fas fa-bars"></i>
@@ -54,6 +56,7 @@
                 <li><a href="#literasi-digital" class="block py-2 hover:bg-gray-800"><i class="fas fa-book-reader mr-1 text-green-400"></i>Literasi Digital</a></li>
                 <li><a href="#etika-privasi" class="block py-2 hover:bg-gray-800"><i class="fas fa-user-secret mr-1 text-blue-400"></i>Etika Privasi</a></li>
                 <li><a href="#praktik-terbaik" class="block py-2 hover:bg-gray-800"><i class="fas fa-check-circle mr-1 text-yellow-400"></i>Praktik Terbaik</a></li>
+                li><a href="#pencegahan-penipuan" class="block py-2 hover:bg-gray-800"><i class="fas fa-user-shield mr-1 text-red-400"></i>Pencegahan Penipuan</a></li>
             </ul>
         </nav>
     </header>
@@ -69,6 +72,23 @@
             </div>
         </section>
 
+        <section id="pencegahan-penipuan" class="py-16 fraud-prevention-bg text-white">
+            <div class="container mx-auto px-4">
+                <h2 class="text-3xl font-bold mb-8 text-center"><i class="fas fa-user-shield mr-2"></i>Pencegahan Penipuan Online di Indonesia</h2>
+                <div class="bg-white text-gray-900 p-6 rounded-lg shadow-md">
+                    <p class="mb-4">Penipuan online semakin marak di Indonesia. Berikut beberapa tips untuk mencegah penipuan terkait harga ponsel murah, akun palsu, dan phishing bank atau e-wallet:</p>
+                    <ul class="list-disc pl-6 mb-4">
+                        <li><i class="fas fa-mobile-alt text-blue-500 mr-2"></i><strong>Harga Ponsel Murah:</strong> Waspadalah terhadap tawaran ponsel dengan harga yang terlalu murah. Selalu beli dari toko resmi atau marketplace terpercaya. Periksa ulasan pembeli sebelumnya dan pastikan ada garansi resmi.</li>
+                        <li><i class="fas fa-user-secret text-green-500 mr-2"></i><strong>Akun Palsu:</strong> Verifikasi identitas akun sebelum bertransaksi. Periksa tanggal pembuatan akun, jumlah followers, dan aktivitas akun. Akun baru dengan tawaran menggiurkan sering kali merupakan penipuan.</li>
+                        <li><i class="fas fa-piggy-bank text-red-500 mr-2"></i><strong>Phishing Bank/E-wallet:</strong> Jangan pernah memberikan informasi sensitif seperti PIN, password, atau OTP melalui telepon, SMS, atau email. Bank dan e-wallet resmi tidak akan meminta informasi ini secara langsung.</li>
+                        <li><i class="fas fa-link text-yellow-500 mr-2"></i><strong>Tautan Mencurigakan:</strong> Hindari mengklik tautan yang dikirim melalui pesan atau email yang tidak diminta, terutama yang meminta Anda login ke akun bank atau e-wallet.</li>
+                        <li><i class="fas fa-shield-alt text-purple-500 mr-2"></i><strong>Keamanan Perangkat:</strong> Pastikan perangkat Anda memiliki antivirus terbaru dan selalu update sistem operasi untuk melindungi dari malware yang dapat mencuri data.</li>
+                    </ul>
+                    <p class="font-semibold">Ingat: Jika sesuatu terlihat terlalu bagus untuk menjadi kenyataan, mungkin itu memang penipuan. Selalu waspada dan verifikasi sebelum bertransaksi online.</p>
+                </div>
+            </div>
+        </section>
+        
         <section id="penipuan-online" class="py-16 fraud-detection-bg text-white">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold mb-8 text-center"><i class="fas fa-shield-alt mr-2"></i>Cara Mengenali Penipuan Online</h2>
