--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li><a href="#literasi-digital" class="block py-2 hover:bg-gray-800"><i class="fas fa-book-reader mr-1 text-green-400"></i>Literasi Digital</a></li>
                 <li><a href="#etika-privasi" class="block py-2 hover:bg-gray-800"><i class="fas fa-user-secret mr-1 text-blue-400"></i>Etika Privasi</a></li>
                 <li><a href="#praktik-terbaik" class="block py-2 hover:bg-gray-800"><i class="fas fa-check-circle mr-1 text-yellow-400"></i>Praktik Terbaik</a></li>
-                li><a href="#pencegahan-penipuan" class="block py-2 hover:bg-gray-800"><i class="fas fa-user-shield mr-1 text-red-400"></i>Pencegahan Penipuan</a></li>
+                <li><a href="#pencegahan-penipuan" class="block py-2 hover:bg-gray-800"><i class="fas fa-user-shield mr-1 text-red-400"></i>Pencegahan Penipuan</a></li>
             </ul>
         </nav>
     </header>
@@ -74,7 +74,7 @@
 
         <section id="pencegahan-penipuan" class="py-16 fraud-prevention-bg text-white">
             <div class="container mx-auto px-4">
-                <h2 class="text-3xl font-bold mb-8 text-center"><i class="fas fa-user-shield mr-2"></i>Pencegahan Penipuan Online di Indonesia</h2>
+                <h2 class="text-3xl font-bold mb-8 text-center"><i class="fas fa-user-shield mr-2"></i>Pencegahan Penipuan Online World</h2>
                 <div class="bg-white text-gray-900 p-6 rounded-lg shadow-md">
                     <p class="mb-4">Penipuan online semakin marak di Indonesia. Berikut beberapa tips untuk mencegah penipuan terkait harga ponsel murah, akun palsu, dan phishing bank atau e-wallet:</p>
                     <ul class="list-disc pl-6 mb-4">
