--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <section id="pencegahan-penipuan" class="py-16 fraud-prevention-bg text-white">
             <div class="container mx-auto px-4">
-                <h2 class="text-3xl font-bold mb-8 text-center"><i class="fas fa-user-shield mr-2"></i>Pencegahan Penipuan Online World</h2>
+                <h2 class="text-3xl font-bold mb-8 text-center"><i class="fas fa-user-shield mr-2"></i>Pencegahan Penipuan In Cyberspace</h2>
                 <div class="bg-white text-gray-900 p-6 rounded-lg shadow-md">
                     <p class="mb-4">Penipuan online semakin marak di Indonesia. Berikut beberapa tips untuk mencegah penipuan terkait harga ponsel murah, akun palsu, dan phishing bank atau e-wallet:</p>
                     <ul class="list-disc pl-6 mb-4">
