--- a/index.html
+++ b/index.html
@@ -222,15 +222,21 @@
                 </div>
                 <div>
                     <h3 class="text-xl font-bold mb-4">Contact</h3>
-                    <p>Email: contact@agamriyandana.my.id</p>
-                    <p>Phone: +62 123 456 7890</p>
+                    <p class="flex items-center mb-2">
+                        <i class="fas fa-envelope text-yellow-400 mr-2"></i>
+                        <a href="mailto:contact@agamriyandana.my.id" class="hover:text-blue-400 transition duration-300">contact@agamriyandana.my.id</a>
+                    </p>
+                    <p class="flex items-center">
+                        <i class="fab fa-telegram text-blue-400 mr-2"></i>
+                        <a href="https://t.me/agam_riyandana" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Telegram</a>
+                    </p>
                 </div>
                 <div>
                     <h3 class="text-xl font-bold mb-4">Follow Us</h3>
                     <div class="flex space-x-4">
-                        <a href="https://www.facebook.com/agamriyandana.id" class="text-2xl hover:text-blue-400 transition duration-300" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/agamriyandana.id" class="text-2xl hover:text-blue-600 transition duration-300" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                         <a href="https://x.com/agam_riyandana1" class="text-2xl hover:text-blue-400 transition duration-300" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="https://instagram.com/realagam1" class="text-2xl hover:text-pink-400 transition duration-300" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://instagram.com/realagam1" class="text-2xl hover:text-pink-600 transition duration-300" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -275,4 +281,3 @@
     </script>
 </body>
 </html>
-    
