--- a/index.html
+++ b/index.html
@@ -244,6 +244,47 @@
                 <p class="mt-4">&copy; <span id="current-year"></span> Agam Riyandana All Rights Reserved. Dibuat Dengan <i class="fas fa-heart text-red-500"></i> Untuk Indonesia</p>
             </div>
         </div>
+    footer class="bg-gray-900 text-white py-8">
+        <div class="container mx-auto px-4">
+            <div class="grid md:grid-cols-3 gap-8">
+                <div>
+                    <h3 class="text-xl font-bold mb-4">Quick Links</h3>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="hover:text-blue-400 transition duration-300">Home</a></li>
+                        <li><a href="#privacy-policy" class="hover:text-blue-400 transition duration-300">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="text-xl font-bold mb-4">Contact</h3>
+                    <p class="flex items-center mb-2">
+                        <i class="fas fa-envelope text-yellow-400 mr-2"></i>
+                        <a href="mailto:contact@agamriyandana.my.id" class="hover:text-blue-400 transition duration-300">contact@agamriyandana.my.id</a>
+                    </p>
+                    <p class="flex items-center">
+                        <i class="fab fa-telegram text-blue-400 mr-2"></i>
+                        <a href="https://t.me/agamriyandana" class="hover:text-blue-400 transition duration-300">@agamriyandana</a>
+                    </p>
+                </div>
+                <div>
+                    <h3 class="text-xl font-bold mb-4">Follow Us</h3>
+                    <div class="flex space-x-4">
+                        <a href="https://www.facebook.com/agamriyandana.id" class="text-2xl hover:text-blue-600 transition duration-300" aria-label="Facebook">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="https://x.com/agam_riyandana1" class="text-2xl hover:text-blue-400 transition duration-300" aria-label="Twitter">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="https://instagram.com/realagam1" class="text-2xl hover:text-pink-600 transition duration-300" aria-label="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-8 text-center">
+                <p class="mt-4">&copy; <span id="current-year"></span> Agam Riyandana All Rights Reserved. Dibuat Dengan <i class="fas fa-heart text-red-500"></i> Untuk Indonesia</p>
+            </div>
+            </div>
+        </div>
     </footer>
 
     <!-- AdSense Privacy Policy (Hidden by default) -->
