--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     </p>
                     <p class="flex items-center">
                         <i class="fab fa-telegram text-blue-400 mr-2"></i>
-                        <a href="https://t.me/agamriyandana" class="hover:text-blue-400 transition duration-300">@agamriyandana</a>
+                        <a href="https://t.me/agam_riyandana" class="hover:text-blue-400 transition duration-300">@agam_riyandana</a>
                     </p>
                 </div>
                 <div>
@@ -287,4 +287,3 @@
     </script>
 </body>
 </html>
-    
