--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="literasi digital, media sosial, cyber crimes, etika privasi, keamanan online, Indonesia">
     <meta name="author" content="Agam Riyandana">
     <meta name="google-adsense-account" content="ca-pub-3345566781682408">
+    <meta property="og:site_name" content="Literasi Digital">
     <title>Literasi Digital dan Pendidikan Media Sosial Indonesia | Panduan Lengkap</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <script src="https://cdn.tailwindcss.com"></script>
