--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <ul class="hidden md:flex space-x-4">
                     <li><a href="#penipuan-online" class="hover:text-blue-400 transition duration-300"><i class="fas fa-shield-alt mr-1 text-blue-400"></i>Penipuan Online</a></li>
                     <li><a href="#cyber-crimes" class="hover:text-red-400 transition duration-300"><i class="fas fa-exclamation-triangle mr-1 text-red-400"></i>Cyber Crimes</a></li>
+                    <li><a href="#qr-qris-differences" class="hover:text-indigo-400 transition duration-300"><i class="fas fa-qrcode mr-1 text-indigo-400"></i>QR & QRIS</a></li>
                     <li><a href="#literasi-digital" class="hover:text-green-400 transition duration-300"><i class="fas fa-book-reader mr-1 text-green-400"></i>Literasi Digital</a></li>
                     <li><a href="#etika-privasi" class="hover:text-blue-400 transition duration-300"><i class="fas fa-user-secret mr-1 text-blue-400"></i>Etika Privasi</a></li>
                     <li><a href="#praktik-terbaik" class="hover:text-yellow-400 transition duration-300"><i class="fas fa-check-circle mr-1 text-yellow-400"></i>Praktik Terbaik</a></li>
@@ -54,6 +55,7 @@
             <ul id="mobile-menu" class="hidden md:hidden mt-4 space-y-2">
                 <li><a href="#penipuan-online" class="block py-2 hover:bg-gray-800"><i class="fas fa-shield-alt mr-1 text-blue-400"></i>Penipuan Online</a></li>
                 <li><a href="#cyber-crimes" class="block py-2 hover:bg-gray-800"><i class="fas fa-exclamation-triangle mr-1 text-red-400"></i>Cyber Crimes</a></li>
+                <li><a href="#qr-qris-differences" class="block py-2 hover:bg-gray-800"><i class="fas fa-qrcode mr-1 text-indigo-400"></i>QR & QRIS</a></li>
                 <li><a href="#literasi-digital" class="block py-2 hover:bg-gray-800"><i class="fas fa-book-reader mr-1 text-green-400"></i>Literasi Digital</a></li>
                 <li><a href="#etika-privasi" class="block py-2 hover:bg-gray-800"><i class="fas fa-user-secret mr-1 text-blue-400"></i>Etika Privasi</a></li>
                 <li><a href="#praktik-terbaik" class="block py-2 hover:bg-gray-800"><i class="fas fa-check-circle mr-1 text-yellow-400"></i>Praktik Terbaik</a></li>
@@ -73,6 +75,45 @@
             </div>
         </section>
 
+        <section id="qr-qris-differences" class="py-16 bg-indigo-600 text-white">
+            <div class="container mx-auto px-4">
+                <h2 class="text-3xl font-bold mb-8 text-center"><i class="fas fa-qrcode mr-2"></i>Perbedaan QR dan QRIS Indonesia</h2>
+                <div class="bg-white text-gray-900 p-6 rounded-lg shadow-md">
+                    <div class="grid md:grid-cols-2 gap-8">
+                        <div>
+                            <h3 class="text-xl font-semibold mb-4"><i class="fas fa-qrcode text-blue-500 mr-2"></i>QR Code</h3>
+                            <p class="mb-4">QR Code (Quick Response Code) adalah kode matriks dua dimensi yang dapat menyimpan berbagai jenis informasi.</p>
+                            <ul class="list-disc pl-6 mb-4">
+                                <li>Dapat menyimpan berbagai jenis data (URL, teks, dll.)</li>
+                                <li>Digunakan secara luas di berbagai industri</li>
+                                <li>Tidak terstandardisasi untuk pembayaran di Indonesia</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <h3 class="text-xl font-semibold mb-4"><i class="fas fa-money-check-alt text-green-500 mr-2"></i>QRIS</h3>
+                            <p class="mb-4">QRIS (QR Code Indonesian Standard) adalah standar QR untuk pembayaran digital yang ditetapkan oleh Bank Indonesia.</p>
+                            <ul class="list-disc pl-6 mb-4">
+                                <li>Khusus untuk transaksi pembayaran</li>
+                                <li>Terstandardisasi dan diatur oleh Bank Indonesia</li>
+                                <li>Dapat digunakan di seluruh penyedia layanan pembayaran di Indonesia</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="mt-8">
+                        <h3 class="text-xl font-semibold mb-4"><i class="fas fa-shield-alt text-red-500 mr-2"></i>Pencegahan Manipulasi dan Phishing</h3>
+                        <ul class="list-disc pl-6 mb-4">
+                            <li><i class="fas fa-lock text-yellow-500 mr-2"></i><strong>Verifikasi Sumber:</strong> Pastikan Anda memindai QR code dari sumber yang terpercaya dan resmi.</li>
+                            <li><i class="fas fa-eye text-purple-500 mr-2"></i><strong>Periksa URL:</strong> Sebelum mengikuti tautan dari QR code, periksa URL-nya dengan teliti.</li>
+                            <li><i class="fas fa-mobile-alt text-blue-500 mr-2"></i><strong>Gunakan Aplikasi Resmi:</strong> Untuk QRIS, selalu gunakan aplikasi pembayaran resmi yang terdaftar di Bank Indonesia.</li>
+                            <li><i class="fas fa-user-shield text-green-500 mr-2"></i><strong>Jangan Bagikan Informasi Sensitif:</strong> QR code atau QRIS yang sah tidak akan meminta Anda memasukkan informasi sensitif seperti PIN atau password.</li>
+                            <li><i class="fas fa-sync-alt text-red-500 mr-2"></i><strong>Update Aplikasi:</strong> Selalu perbarui aplikasi pembayaran Anda untuk mendapatkan fitur keamanan terbaru.</li>
+                            <li><i class="fas fa-exclamation-triangle text-orange-500 mr-2"></i><strong>Waspada Terhadap Tawaran Mencurigakan:</strong> Berhati-hatilah dengan QR code yang menawarkan hadiah atau diskon yang terlalu menggiurkan.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <section id="pencegahan-penipuan" class="py-16 fraud-prevention-bg text-white">
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl font-bold mb-8 text-center"><i class="fas fa-user-shield mr-2"></i>Pencegahan Penipuan In Cyberspace</h2>
