--- a/index.html
+++ b/index.html
@@ -7,11 +7,31 @@
     <meta name="keywords" content="literasi digital, media sosial, cyber crimes, etika privasi, keamanan online, Indonesia">
     <meta name="author" content="Agam Riyandana">
     <meta name="google-adsense-account" content="ca-pub-3345566781682408">
+    <meta property="og:site_name" content="Literasi Digital Indonesia">
+    <meta property="og:title" content="Literasi Digital dan Keamanan Online Indonesia | Panduan Lengkap">
+    <meta property="og:description" content="Pelajari cara aman dan efektif menggunakan internet dan media sosial di Indonesia. Temukan tips pencegahan penipuan online, keamanan siber, dan etika digital.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://literasi-digital.agamriyandana.my.id/">
     <meta property="og:site_name" content="Literasi Digital">
     <title>Literasi Digital dan Pendidikan Media Sosial Indonesia | Panduan Lengkap</title>
+    <link rel="canonical" href="https://literasi-digital.agamriyandana.my.id">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <script src="https://cdn.tailwindcss.com"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3345566781682408" crossorigin="anonymous"></script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Literasi Digital Indonesia",
+      "url": "https://literasi-digital.agamriyandana.my.id",
+      "description": "Panduan lengkap literasi digital dan keamanan online di Indonesia.",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://literasi-digital.agamriyandana.my.id/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+</script>
     <style>
         .cyber-bg {
             background-color: #000;
